# sashlab_stress

./: .849C9593-D756-4E56-8D6E-42412F2A707B  .gitignore  LICENSE  Maths_Task_SOB.ipynb  Partitpant.py  README.md  README.qmd  __init__.py  __main__.py  attention.py  clear_prompt.py  dependencies.py  difficulty_manager.py  hello.py  make_number.py  pyproject.toml  trial.py
.github/workflows/: python-publish.yml
sashlab_stress/: Participant.py  RoundInfo.py  __init__.py  __main__.py  attention.py  clear_prompt.py  dependencies.py  difficulty_manager.py  log_rounds.py  make_number.py  mental_subtraction.py  neg_neu_speech_task.py  pyproject.toml  session_setup.py  threaded_trial.py  trial.py
