
[project]
name = "sashlab_stress"
version = "0.1.0"
description = "A collection of scripts that run common stress tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.8.0",
    "inputimeout>=1.0.4",
    "jupyter>=1.1.1",
    "keyboard>=0.13.5",
    "pandas>=2.2.3",
]

authors = [
    {name = "Kevin O'Malley", email = "kevomalley743@gmail.com"},
    {name = "Sandra O'Brien", email = "sandra.obrien@ul.ie"},
]

license = {text = "MIT"}
keywords = ["stress", "psychology", "CLI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: windows 10/windows 11",
]

    
[project.scripts]
sashlab_stress = "sashlab_stress.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sashlab_stress"]

